--- a/.github/workflows/push.yaml
+++ b/.github/workflows/push.yaml
@@ -32,4 +32,13 @@ jobs:
           go-version: '1.16.2'
 
       - name: Run tests
-        run: go test ./...
+        run: go test -coverprofile=coverage.out -covermode=atomic ./...
+
+      - name: Upload coverage to Codecov
+        uses: codecov/codecov-action@v2
+        with:
+          token: ${{ secrets.CODECOV_TOKEN }}
+          files: coverage.out
+          fail_ci_if_error: true
+          flags: unittests
+          verbose: true
